--- a/index.html
+++ b/index.html
@@ -379,10 +379,10 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Contact Me</h2>
+          <p><strong> Ready to turn your ideas into stunning websites. Let's connect and bring your online presence to life. Contact me now!</strong></p>
         </div>
-
+        
         <div class="row" data-aos="fade-in">
 
           <div class="col-lg-5 d-flex align-items-stretch">
