--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="fa-regular fa-image"></i></a>
+                <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="video wizardry"><i class="fa-regular fa-image"></i></a>
                 <a href="video/index.html" title="More Details"><i class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
@@ -334,7 +334,7 @@
                               <h2>₹7499</h2>
                           </li>
                           <li> <i class="fa fa-check" aria-hidden="true"></i> HTML Website </li>
-                          <li> <i class="fa fa-check" aria-hidden="true"></i> .COM Domain for 2 Year </li>
+                          <li> <i class="fa fa-check" aria-hidden="true"></i> .COM Domain for 1 Year </li>
                           <li> <i class="fa fa-check" aria-hidden="true"></i> 5 Page + Responsive Design </li>
                           <li> <i class="fa fa-check" aria-hidden="true"></i> About, Contact, Services, Photo Gallery</li>
 
@@ -357,7 +357,7 @@
                               <h2>₹24,999</h2>
                           </li>
                           <li> <i class="fa fa-check" aria-hidden="true"></i> HTML Website </li>
-                          <li> <i class="fa fa-check" aria-hidden="true"></i> .COM Domain for 3 Year </li>
+                          <li> <i class="fa fa-check" aria-hidden="true"></i> .COM Domain for 1 Year </li>
                           <li> <i class="fa fa-check" aria-hidden="true"></i> Responsive Design </li>
                           <li> <i class="fa fa-check" aria-hidden="true"></i> Unlimited Products </li>
                           <li> <i class="fa fa-check" aria-hidden="true"></i> Social Media Links </li>
